--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
