--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@fontsource/roboto": "^5.0.5",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/react": "^2.7.0",
+    "dayjs": "^1.11.9",
+    "ethers": "^6.6.5",
     "framer-motion": "^10.12.22",
     "gh-pages": "^5.0.0",
     "git-pages": "^0.8.1",
@@ -25,7 +29,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "usehooks-ts": "^2.9.1",
+    "viem": "^1.4.1",
     "wagmi": "^1.3.9"
   },
   "devDependencies": {
